--- a/css/register.styles.css
+++ b/css/register.styles.css
@@ -217,6 +217,14 @@ footer {
 
 
 /*form log in*/
+small{
+    display: none;
+}
+
+.was-validated small {
+    display: block;
+    color: red;
+}
 
 /*form register*/
 
