Validaciones log_in

--- a/css/colectionStyles.css
+++ b/css/colectionStyles.css
@@ -27,3 +27,11 @@
 .colorIconLsb {
     color: lightskyblue;
 }
+
+.warnings{
+    width: 200px;
+    text-align: center;
+    margin: auto;
+    color: red;
+    padding-top: 20px;
+}
